--- a/style.css
+++ b/style.css
@@ -133,3 +133,37 @@ footer{
     height: inherit;
     margin: 0 1em;
 }
+/* prépartion du responsive à partir de 576px */
+@media only screen and (max-width: 576px) {
+    #hero{
+        display: block;
+        text-align: center;
+    }
+    #hero div{
+        height: 30vh;
+        margin: 0;
+    }
+    #icone{
+        width: 100%;
+        justify-content: space-around;
+    }
+    main section{
+        padding-top: 2em;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .flou1{
+        margin: 0;
+    }
+    .flou2{
+        margin: 0;
+        order: -1;
+    }
+    #section2{
+        text-align: center;
+    }
+
+    
+}
